Update week_1 notebook

--- a/week_1.ipynb
+++ b/week_1.ipynb
@@ -312,7 +312,9 @@
    "id": "bc08d350",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#test commit"
+   ]
   }
  ],
  "metadata": {
