--- a/week_6/Week 6 - Numerical Python (NumPy) Practice.ipynb
+++ b/week_6/Week 6 - Numerical Python (NumPy) Practice.ipynb
@@ -802,7 +802,7 @@
    "source": [
     "import numpy as np\n",
     "\n",
-    "arr = np.array([[1, 2], [3, 4], [5, 6], [7, 8], {9, 10}, [11, 12]])\n",
+    "arr = np.array([[1, 2], [3, 4], [5, 6], [7, 8], [9, 10], [11, 12]])\n",
     "\n",
     "newarr = np.array_split(arr, 3)\n",
     "\n",
